--- a/build-tools/package.json
+++ b/build-tools/package.json
@@ -81,6 +81,7 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@commitlint/cz-commitlint": "^17.1.2",
     "@commitlint/prompt": "^17.1.2",
+    "@commitlint/prompt-cli": "^17.1.2",
     "@fluidframework/test-tools": "^0.2.3074",
     "@microsoft/api-documenter": "^7.17.9",
     "@microsoft/api-extractor": "^7.22.2",
