--- a/.github/workflows/commit-validation.yml
+++ b/.github/workflows/commit-validation.yml
@@ -3,7 +3,11 @@ name: "Commit message validation"
 on:
   pull_request:
     branches: [main, commitlint]
-    paths: ['build-tools/**', '.github/workflows/commit-validation.yml']
+    paths: [
+      # Commit validation in PRs applies to build-tools only as of now.
+      'build-tools/**',
+      '.github/workflows/commit-validation.yml'
+    ]
     types: [opened, synchronize, edited, ready_for_review]
 
 jobs:
@@ -12,13 +16,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: sitezen/pr-comment-checker@v1.0.0
+      - uses: sitezen/pr-comment-checker@v1.0.1
         with:
           pr_description_should_not_contain: |
             Feel free to remove or alter parts of this template that do not offer value for your specific change
           wrong_pr_description_message: |
             Your PR description contains placeholder content from the PR template. Remove or replace the placeholder
-            content.
+            content. More information at:
+
+            https://github.com/microsoft/FluidFramework/wiki/Commit-message-style#pr-template-content
 
   conventional-pr-title:
     name: Check that the PR title matches commitlint settings
@@ -26,12 +32,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-      # - uses: beemojs/conventional-pr-action@v2.1.2
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
 
       - name: Install dependencies
-        run: npm run install:root
+        run: "npm run install:commitlint"
         working-directory: build-tools
+
+      # Lints the PR title according to the settings file in the repo
       - uses: JulienKode/pull-request-name-linter-action@v0.5.0
