--- a/.github/workflows/commit-validation.yml
+++ b/.github/workflows/commit-validation.yml
@@ -38,8 +38,7 @@ jobs:
           version: latest
           run_install: |
             - cwd: build-tools
-              recursive: false
-              args: [--frozen-lockfile, --ignore-scripts]
+              args: [--ignore-scripts]
 
       # Lints the PR title according to the settings file in the repo
       - uses: JulienKode/pull-request-name-linter-action@v0.5.0
