--- a/.github/workflows/commit-validation.yml
+++ b/.github/workflows/commit-validation.yml
@@ -30,9 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-
-      - uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v2.2.4
         name: Install dependencies
         with:
           version: latest
@@ -42,5 +40,6 @@ jobs:
 
       # Lints the PR title according to the settings file in the repo
       - uses: JulienKode/pull-request-name-linter-action@v0.5.0
+        name: Lint PR title
         with:
           configuration-path: build-tools/commitlint.config.cjs
