--- a/.github/workflows/commit-validation.yml
+++ b/.github/workflows/commit-validation.yml
@@ -31,12 +31,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: pnpm/action-setup@v2.2.4
-        name: Install dependencies
         with:
-          version: latest
-          run_install: |
-            - cwd: build-tools
-              args: [--ignore-scripts]
+          version: 7
+      # - uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 14
+      #     cache: 'pnpm'
+
+      - name: Install dependencies
+        run: |
+          # Only install the root dependencies since we don't need the whole workspace
+          pnpm config recursive-install false
+          pnpm install --ignore-scripts
 
       # Lints the PR title according to the settings file in the repo
       - uses: JulienKode/pull-request-name-linter-action@v0.5.0
