--- a/.github/workflows/commit-validation.yml
+++ b/.github/workflows/commit-validation.yml
@@ -29,7 +29,9 @@ jobs:
     name: Check that the PR title matches commitlint settings
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          persist-credentials: false
       - uses: pnpm/action-setup@v2.2.4
         with:
           version: 7
