--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -8,15 +8,26 @@ on:
       - commitlint
 
 jobs:
+  validate-codeowners:
+    name: Validate CODEOWNERS
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@@v2
+      - uses: mszostok/codeowners-validator@v0.6.0
+        with:
+          github_access_token: "${{ secrets.GITHUB_TOKEN }}"
+          checks: "files,duppatterns,syntax"
+
   # JOB to run change detection
   changes:
+    name: Determine changed path
     runs-on: ubuntu-latest
     # Set job outputs to values from filter step
     outputs:
       build-tools: ${{ steps.filter.outputs.build-tools }}
     steps:
     # For pull requests it's not necessary to checkout the code
-    - uses: dorny/paths-filter@v2.10.2
+    - uses: dorny/paths-filter@v2.11.1
       id: filter
       with:
         filters: |
@@ -24,45 +35,41 @@ jobs:
             - 'build-tools/**'
             - '.github/workflows/commit-validation.yml'
 
-  validate-codeowners:
-    name: Validate CODEOWNERS
-    runs-on: ubuntu-latest
-    needs: changes
-    if: ${{ needs.changes.outputs.backend == 'true' }}
-    steps:
-      - uses: actions/checkout@7884fcad6b5d53d10323aee724dc68d8b9096a2e # pin@v2
-      - uses: mszostok/codeowners-validator@2f6e3bb39aa6837d7dcf8eff2de5d6c046d0c9a9 # pin@v0.6.0
-        with:
-          github_access_token: "${{ secrets.GITHUB_TOKEN }}"
-          checks: "files,duppatterns,syntax"
-
-  placeholder-content:
-    name: PR template placeholder content is removed
+  conventional-pr-title:
+    name: PR title matches conventional commit format
     runs-on: ubuntu-latest
     needs: changes
     if: ${{ needs.changes.outputs.build-tools == 'true' }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: sitezen/pr-comment-checker@v1.0.0
+      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # ratchet:actions/checkout@v3
+        with:
+          persist-credentials: false
+      - uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd # ratchet:pnpm/action-setup@v2.2.4
+        with:
+          version: 7
+      - name: Install dependencies
+        working-directory: build-tools
+        run: |
+          # Only install the root dependencies since we don't need the whole workspace
+          pnpm config set recursive-install false
+          pnpm install --ignore-scripts
+      # Lints the PR title according to the settings file in the repo
+      - uses: JulienKode/pull-request-name-linter-action@8c05fb989d9f156ce61e33754f9802c9d3cffa58 # ratchet:JulienKode/pull-request-name-linter-action@v0.5.0
+        name: Lint PR title
+        with:
+          configuration-path: build-tools/commitlint.config.cjs
+
+  placeholder-content:
+    name: PR template placeholder content
+    runs-on: ubuntu-latest
+    needs: changes
+    if: ${{ needs.changes.outputs.build-tools == 'true' }}
+    steps:
+      - uses: sitezen/pr-comment-checker@f1e956fac00c6d1163d15841886ae80b7ae58ecb # ratchet:sitezen/pr-comment-checker@v1.0.1
         with:
           pr_description_should_not_contain: |
             Feel free to remove or alter parts of this template that do not offer value for your specific change
           wrong_pr_description_message: |
             Your PR description contains placeholder content from the PR template. Remove or replace the placeholder
-            content.
-
-  conventional-pr-title:
-    name: PR conforms to repo commitlint settings
-    runs-on: ubuntu-latest
-    needs: changes
-    if: ${{ needs.changes.outputs.build-tools == 'true' }}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-      - name: Install dependencies
-        run: npm run install:root
-        working-directory: build-tools
-      - uses: JulienKode/pull-request-name-linter-action@v0.5.0
-        name: PR title conforms to repo commitlint settings
-        with:
-          configuration-path: build-tools/commitlint.config.cjs
+            content. More information at:
+            https://github.com/microsoft/FluidFramework/wiki/Commit-message-style#pr-template-content
