--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -12,7 +12,7 @@ jobs:
     name: Validate CODEOWNERS
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@@v2
+      - uses: actions/checkout@v2
       - uses: mszostok/codeowners-validator@v0.6.0
         with:
           github_access_token: "${{ secrets.GITHUB_TOKEN }}"
