--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -1,45 +1,82 @@
 name: "Fluid PR Validation"
 on:
   pull_request:
-    types: [ opened, synchronize, edited, ready_for_review, reopened ]
+    types:
+      - opened # PR is created
+      - synchronize # commits added to PR
+      - reopened # closed PR re-opened
+      - edited # title or body edited, or base branch changed
     branches:
       - main
+      - next
       - release/*
       - commitlint
 
 jobs:
+  # This job determines what paths have changed in the PR and outputs a boolean. Using the paths filter in the
+  # pull_request event doesn't work. Per the GitHub docs, "If a workflow is skipped due to path filtering, branch
+  # filtering or a commit message, then checks associated with that workflow will remain in a 'Pending' state. A pull
+  # request that requires those checks to be successful will be blocked from merging." This means we can't make such
+  # jobs required for PRs to be merged, because the jobs just stay in the pending state.
+  changed-paths:
+    name: Determine changed paths
+    runs-on: ubuntu-latest
+    steps:
+      # For pull requests it's not necessary to checkout the code
+      - uses: dorny/paths-filter@4512585405083f25c027a35db413c2b3b9006d50 # ratchet:dorny/paths-filter@v2.11.1
+        id: filter
+        with:
+          filters: |
+            build-tools:
+              - 'build-tools/**'
+              - '.github/workflows/commit-validation.yml'
+    # Set job outputs to values from filter step
+    outputs:
+      build-tools: ${{ steps.filter.outputs.build-tools }}
+
   validate-codeowners:
     name: Validate CODEOWNERS
     runs-on: ubuntu-latest
+    # Run only on events that could change the code
+    if: |
+      github.event.action == 'opened' ||
+      github.event.action == 'synchronize' ||
+      github.event.action == 'reopened'
     steps:
-      - uses: actions/checkout@v3
-      - uses: mszostok/codeowners-validator@v0.7.4
+      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # ratchet:actions/checkout@v3
+        with:
+          persist-credentials: false
+      - uses: mszostok/codeowners-validator@7f3f5e28c6d7b8dfae5731e54ce2272ca384592f # ratchet:mszostok/codeowners-validator@v0.7.4
         with:
           github_access_token: "${{ secrets.GITHUB_TOKEN }}"
           checks: "files,duppatterns,syntax"
 
-  # JOB to run change detection
-  changes:
-    name: Determine changed path
+  # This job checks that PR template placeholder content has been removed from the PR body.
+  placeholder-content:
+    name: PR template placeholder content
     runs-on: ubuntu-latest
-    # Set job outputs to values from filter step
-    outputs:
-      build-tools: ${{ steps.filter.outputs.build-tools }}
+    if: github.event.action == 'edited'
     steps:
-    # For pull requests it's not necessary to checkout the code
-    - uses: dorny/paths-filter@v2.11.1
-      id: filter
-      with:
-        filters: |
-          build-tools:
-            - 'build-tools/**'
-            - '.github/workflows/commit-validation.yml'
+      - uses: sitezen/pr-comment-checker@f1e956fac00c6d1163d15841886ae80b7ae58ecb # ratchet:sitezen/pr-comment-checker@v1.0.1
+        with:
+          pr_description_should_not_contain: |
+            Feel free to remove or alter parts of this template that do not offer value for your specific change
+          wrong_pr_description_message: |
+            Your PR description contains placeholder content from the PR template. Remove or replace the placeholder
+            content. More information at:
+            https://github.com/microsoft/FluidFramework/wiki/Commit-message-style#pr-template-content
 
+  # We've adopted conventional commits in the build-tools release group. The CI jobs below require the PR title and body
+  # to match our standards. More information can be found in the wiki:
+  # https://github.com/microsoft/FluidFramework/wiki/Commit-message-style
   conventional-pr-title:
     name: PR title matches conventional commit format
     runs-on: ubuntu-latest
+    # Only runs if build-tools is changed
     needs: changes
-    if: ${{ needs.changes.outputs.build-tools == 'true' }}
+    if: |
+      needs.changes.outputs.build-tools == 'true' &&
+      github.event.action == 'edited'
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # ratchet:actions/checkout@v3
         with:
@@ -58,18 +95,3 @@ jobs:
         name: Lint PR title
         with:
           configuration-path: build-tools/commitlint.config.cjs
-
-  placeholder-content:
-    name: PR template placeholder content
-    runs-on: ubuntu-latest
-    needs: changes
-    if: ${{ needs.changes.outputs.build-tools == 'true' }}
-    steps:
-      - uses: sitezen/pr-comment-checker@f1e956fac00c6d1163d15841886ae80b7ae58ecb # ratchet:sitezen/pr-comment-checker@v1.0.1
-        with:
-          pr_description_should_not_contain: |
-            Feel free to remove or alter parts of this template that do not offer value for your specific change
-          wrong_pr_description_message: |
-            Your PR description contains placeholder content from the PR template. Remove or replace the placeholder
-            content. More information at:
-            https://github.com/microsoft/FluidFramework/wiki/Commit-message-style#pr-template-content
