--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -55,7 +55,10 @@ jobs:
   placeholder-content:
     name: PR template placeholder content
     runs-on: ubuntu-latest
-    if: github.event.action == 'edited'
+    if: |
+      github.event.action == 'edited' ||
+      github.event.action == 'opened' ||
+      github.event.action == 'reopened'
     steps:
       - uses: sitezen/pr-comment-checker@f1e956fac00c6d1163d15841886ae80b7ae58ecb # ratchet:sitezen/pr-comment-checker@v1.0.1
         with:
@@ -76,7 +79,7 @@ jobs:
     needs: changed-paths
     if: |
       needs.changed-paths.outputs.build-tools == 'true' &&
-      github.event.action == 'edited'
+      github.event.action != 'synchronize'
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # ratchet:actions/checkout@v3
         with:
