build: Set tsconfig language to json5

--- a/.gitattributes
+++ b/.gitattributes
@@ -15,6 +15,7 @@ yarn.lock                    merge=binary
 # Set the language for these files to json5 to ensure GitHub doesn't show the comments as errors
 /.vscode/*.json              linguist-language=JSON5
 fence.json                   linguist-language=JSON5
+tsconfig.json                linguist-language=JSON5
 
 .git-blame-ignore-revs       linguist-language=Ignore List
 
