--- a/server/routerlicious/packages/kafka-orderer/package.json
+++ b/server/routerlicious/packages/kafka-orderer/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "@fluidframework/protocol-definitions": "^1.1.0",
-    "@fluidframework/server-services-core": "^0.1038.4000"
+    "@fluidframework/server-services-core": "workspace:^"
   },
   "devDependencies": {
     "@fluid-tools/build-cli": "0.11.0-134585",
