--- a/server/routerlicious/packages/lambdas/package.json
+++ b/server/routerlicious/packages/lambdas/package.json
@@ -53,14 +53,14 @@
   },
   "dependencies": {
     "@fluidframework/common-definitions": "^0.20.1",
-    "@fluidframework/common-utils": "^1.1.1",
-    "@fluidframework/gitresources": "^0.1038.4000",
-    "@fluidframework/protocol-base": "^0.1038.4000",
+    "@fluidframework/common-utils": "^1.0.0",
+    "@fluidframework/gitresources": "workspace:^",
+    "@fluidframework/protocol-base": "workspace:^",
     "@fluidframework/protocol-definitions": "^1.1.0",
-    "@fluidframework/server-lambdas-driver": "^0.1038.4000",
-    "@fluidframework/server-services-client": "^0.1038.4000",
-    "@fluidframework/server-services-core": "^0.1038.4000",
-    "@fluidframework/server-services-telemetry": "^0.1038.4000",
+    "@fluidframework/server-lambdas-driver": "workspace:^",
+    "@fluidframework/server-services-client": "workspace:^",
+    "@fluidframework/server-services-core": "workspace:^",
+    "@fluidframework/server-services-telemetry": "workspace:^",
     "@types/semver": "^6.0.1",
     "assert": "^2.0.0",
     "async": "^3.2.2",
@@ -80,7 +80,7 @@
     "@fluidframework/build-common": "^1.1.0",
     "@fluidframework/build-tools": "0.11.0-134585",
     "@fluidframework/eslint-config-fluid": "^2.0.0",
-    "@fluidframework/server-test-utils": "^0.1038.4000",
+    "@fluidframework/server-test-utils": "workspace:^",
     "@rushstack/eslint-config": "^2.6.1",
     "@types/async": "^3.2.9",
     "@types/json-stringify-safe": "^5.0.0",
