--- a/server/routerlicious/packages/local-server/package.json
+++ b/server/routerlicious/packages/local-server/package.json
@@ -58,12 +58,12 @@
   "dependencies": {
     "@fluidframework/common-utils": "^1.1.1",
     "@fluidframework/protocol-definitions": "^1.1.0",
-    "@fluidframework/server-lambdas": "^0.1038.4000",
-    "@fluidframework/server-memory-orderer": "^0.1038.4000",
-    "@fluidframework/server-services-client": "^0.1038.4000",
-    "@fluidframework/server-services-core": "^0.1038.4000",
-    "@fluidframework/server-services-telemetry": "^0.1038.4000",
-    "@fluidframework/server-test-utils": "^0.1038.4000",
+    "@fluidframework/server-lambdas": "workspace:^",
+    "@fluidframework/server-memory-orderer": "workspace:^",
+    "@fluidframework/server-services-client": "workspace:^",
+    "@fluidframework/server-services-core": "workspace:^",
+    "@fluidframework/server-services-telemetry": "workspace:^",
+    "@fluidframework/server-test-utils": "workspace:^",
     "debug": "^4.1.1",
     "events": "^3.1.0",
     "jsrsasign": "^10.5.25",
