--- a/server/routerlicious/packages/memory-orderer/package.json
+++ b/server/routerlicious/packages/memory-orderer/package.json
@@ -56,13 +56,13 @@
     "temp-directory": "nyc/.nyc_output"
   },
   "dependencies": {
-    "@fluidframework/common-utils": "^1.1.1",
-    "@fluidframework/protocol-base": "^0.1038.4000",
+    "@fluidframework/common-utils": "^1.0.0",
+    "@fluidframework/protocol-base": "workspace:^",
     "@fluidframework/protocol-definitions": "^1.1.0",
-    "@fluidframework/server-lambdas": "^0.1038.4000",
-    "@fluidframework/server-services-client": "^0.1038.4000",
-    "@fluidframework/server-services-core": "^0.1038.4000",
-    "@fluidframework/server-services-telemetry": "^0.1038.4000",
+    "@fluidframework/server-lambdas": "workspace:^",
+    "@fluidframework/server-services-client": "workspace:^",
+    "@fluidframework/server-services-core": "workspace:^",
+    "@fluidframework/server-services-telemetry": "workspace:^",
     "@types/debug": "^4.1.5",
     "@types/double-ended-queue": "^2.1.0",
     "@types/lodash": "^4.14.118",
