--- a/server/routerlicious/packages/routerlicious-base/package.json
+++ b/server/routerlicious/packages/routerlicious-base/package.json
@@ -51,21 +51,21 @@
     "temp-directory": "nyc/.nyc_output"
   },
   "dependencies": {
-    "@fluidframework/common-utils": "^1.1.1",
-    "@fluidframework/gitresources": "^0.1038.4000",
+    "@fluidframework/common-utils": "^1.0.0",
+    "@fluidframework/gitresources": "workspace:^",
     "@fluidframework/protocol-definitions": "^1.1.0",
-    "@fluidframework/server-kafka-orderer": "^0.1038.4000",
-    "@fluidframework/server-lambdas": "^0.1038.4000",
-    "@fluidframework/server-lambdas-driver": "^0.1038.4000",
-    "@fluidframework/server-memory-orderer": "^0.1038.4000",
-    "@fluidframework/server-services": "^0.1038.4000",
-    "@fluidframework/server-services-client": "^0.1038.4000",
-    "@fluidframework/server-services-core": "^0.1038.4000",
-    "@fluidframework/server-services-ordering-kafkanode": "^0.1038.4000",
-    "@fluidframework/server-services-ordering-rdkafka": "^0.1038.4000",
-    "@fluidframework/server-services-ordering-zookeeper": "^0.1038.4000",
-    "@fluidframework/server-services-telemetry": "^0.1038.4000",
-    "@fluidframework/server-services-utils": "^0.1038.4000",
+    "@fluidframework/server-kafka-orderer": "workspace:^",
+    "@fluidframework/server-lambdas": "workspace:^",
+    "@fluidframework/server-lambdas-driver": "workspace:^",
+    "@fluidframework/server-memory-orderer": "workspace:^",
+    "@fluidframework/server-services": "workspace:^",
+    "@fluidframework/server-services-client": "workspace:^",
+    "@fluidframework/server-services-core": "workspace:^",
+    "@fluidframework/server-services-ordering-kafkanode": "workspace:^",
+    "@fluidframework/server-services-ordering-rdkafka": "workspace:^",
+    "@fluidframework/server-services-ordering-zookeeper": "workspace:^",
+    "@fluidframework/server-services-telemetry": "workspace:^",
+    "@fluidframework/server-services-utils": "workspace:^",
     "body-parser": "^1.17.1",
     "bytes": "^3.0.0",
     "compression": "^1.7.2",
@@ -88,8 +88,8 @@
     "@fluidframework/build-common": "^1.1.0",
     "@fluidframework/build-tools": "0.11.0-134585",
     "@fluidframework/eslint-config-fluid": "^2.0.0",
-    "@fluidframework/server-local-server": "^0.1038.4000",
-    "@fluidframework/server-test-utils": "^0.1038.4000",
+    "@fluidframework/server-local-server": "workspace:^",
+    "@fluidframework/server-test-utils": "workspace:^",
     "@rushstack/eslint-config": "^2.6.1",
     "@types/body-parser": "^1.19.2",
     "@types/bytes": "^3.0.0",
