--- a/server/routerlicious/packages/services-client/package.json
+++ b/server/routerlicious/packages/services-client/package.json
@@ -58,9 +58,9 @@
     "temp-directory": "nyc/.nyc_output"
   },
   "dependencies": {
-    "@fluidframework/common-utils": "^1.1.1",
-    "@fluidframework/gitresources": "^0.1038.4000",
-    "@fluidframework/protocol-base": "^0.1038.4000",
+    "@fluidframework/common-utils": "^1.0.0",
+    "@fluidframework/gitresources": "workspace:^",
+    "@fluidframework/protocol-base": "workspace:^",
     "@fluidframework/protocol-definitions": "^1.1.0",
     "axios": "^0.26.0",
     "crc-32": "1.2.0",
