--- a/server/routerlicious/packages/services-ordering-zookeeper/package.json
+++ b/server/routerlicious/packages/services-ordering-zookeeper/package.json
@@ -29,7 +29,7 @@
     "tsc": "tsc"
   },
   "dependencies": {
-    "@fluidframework/server-services-core": "^0.1038.4000",
+    "@fluidframework/server-services-core": "workspace:^",
     "zookeeper": "^5.3.2"
   },
   "devDependencies": {
@@ -37,7 +37,7 @@
     "@fluidframework/build-common": "^1.1.0",
     "@fluidframework/build-tools": "0.11.0-134585",
     "@fluidframework/eslint-config-fluid": "^2.0.0",
-    "@fluidframework/server-test-utils": "^0.1038.4000",
+    "@fluidframework/server-test-utils": "workspace:^",
     "@rushstack/eslint-config": "^2.6.1",
     "@types/debug": "^4.1.5",
     "@types/lru-cache": "^5.1.0",
