--- a/server/routerlicious/packages/services-utils/package.json
+++ b/server/routerlicious/packages/services-utils/package.json
@@ -53,9 +53,9 @@
   },
   "dependencies": {
     "@fluidframework/protocol-definitions": "^1.1.0",
-    "@fluidframework/server-services-client": "^0.1038.4000",
-    "@fluidframework/server-services-core": "^0.1038.4000",
-    "@fluidframework/server-services-telemetry": "^0.1038.4000",
+    "@fluidframework/server-services-client": "workspace:^",
+    "@fluidframework/server-services-core": "workspace:^",
+    "@fluidframework/server-services-telemetry": "workspace:^",
     "debug": "^4.1.1",
     "express": "^4.17.3",
     "ioredis": "^4.24.2",
@@ -75,7 +75,7 @@
     "@fluidframework/build-common": "^1.1.0",
     "@fluidframework/build-tools": "0.11.0-134585",
     "@fluidframework/eslint-config-fluid": "^2.0.0",
-    "@fluidframework/server-test-utils": "^0.1038.4000",
+    "@fluidframework/server-test-utils": "workspace:^",
     "@rushstack/eslint-config": "^2.6.1",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.11.0",
