--- a/server/routerlicious/packages/services/package.json
+++ b/server/routerlicious/packages/services/package.json
@@ -53,13 +53,13 @@
   "dependencies": {
     "@fluidframework/common-utils": "^1.1.1",
     "@fluidframework/protocol-definitions": "^1.1.0",
-    "@fluidframework/server-services-client": "^0.1038.4000",
-    "@fluidframework/server-services-core": "^0.1038.4000",
-    "@fluidframework/server-services-ordering-kafkanode": "^0.1038.4000",
-    "@fluidframework/server-services-ordering-rdkafka": "^0.1038.4000",
-    "@fluidframework/server-services-shared": "^0.1038.4000",
-    "@fluidframework/server-services-telemetry": "^0.1038.4000",
-    "@fluidframework/server-services-utils": "^0.1038.4000",
+    "@fluidframework/server-services-client": "workspace:^",
+    "@fluidframework/server-services-core": "workspace:^",
+    "@fluidframework/server-services-ordering-kafkanode": "workspace:^",
+    "@fluidframework/server-services-ordering-rdkafka": "workspace:^",
+    "@fluidframework/server-services-shared": "workspace:^",
+    "@fluidframework/server-services-telemetry": "workspace:^",
+    "@fluidframework/server-services-utils": "workspace:^",
     "@socket.io/redis-emitter": "^4.1.1",
     "amqplib": "^0.10.2",
     "axios": "^0.26.0",
@@ -79,7 +79,7 @@
     "@fluidframework/build-common": "^1.1.0",
     "@fluidframework/build-tools": "0.11.0-134585",
     "@fluidframework/eslint-config-fluid": "^2.0.0",
-    "@fluidframework/server-test-utils": "^0.1038.4000",
+    "@fluidframework/server-test-utils": "workspace:^",
     "@rushstack/eslint-config": "^2.6.1",
     "@types/amqplib": "^0.5.17",
     "@types/debug": "^4.1.5",
