add server and build-tools to root

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,3 +2,5 @@ packages:
   - "examples/**"
   - "experimental/**"
   - "packages/**"
+  - "server/routerlicious/packages/**"
+  - "build-tools/packages/**"
