--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,5 @@ engine-strict=true
 # Temporary, because otherwise pnpm fails due to peer dependencies not being satisfied
 # with our current dependency graph.
 strict-peer-dependencies=false
+
+link-workspace-packages=false
