add server projects to workspace

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,4 +3,7 @@ packages:
   - "experimental/**"
   - "packages/**"
   - "server/routerlicious/packages/**"
+  - "server/historian/**"
+  - "server/gitrest/**"
+  - "server/tinylicious/*"
   - "build-tools/packages/**"
