--- a/.github/workflows/pr-check-changeset.yml
+++ b/.github/workflows/pr-check-changeset.yml
@@ -49,7 +49,13 @@ jobs:
         name: Changeset status
         run: |
           # JSON output is piped through jq to compact it to a single line
-          pnpm exec flub check changeset --branch=${{ github.base_ref }} --json | jq -c > changeset-metadata.json
+          pnpm exec flub check changeset --branch=${{ github.base_ref }} --json > changeset-metadata.json
+
+      # We save the PR umber because downstream pipelines are triggered by workflow_run, and the PR number is not easily
+      # retrievable in such workflows
+      - name: Add PR number to metadata
+        run: |
+          echo $(jq -c '. += { pr: "${{ github.event.number }}" }' changeset-metadata.json) > changeset-metadata.json
 
       # Sets required = true/false based on the changeset-required label on the PR
       - name: Changeset required
