--- a/.github/workflows/changeset-reporter.yml
+++ b/.github/workflows/changeset-reporter.yml
@@ -30,7 +30,7 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@fcf6fe9e4a0409cd9316a5011435be0f3327f1e1 # ratchet:marocchino/sticky-pull-request-comment@v2.3.1
         with:
           header: changeset
-          number: fromJson(env.CHANGESET).pr
+          number: ${{ fromJson(env.CHANGESET).pr }}
           path: ./.github/workflows/data/changeset-missing.md
 
       - name: Required and present
@@ -38,7 +38,7 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@fcf6fe9e4a0409cd9316a5011435be0f3327f1e1 # ratchet:marocchino/sticky-pull-request-comment@v2.3.1
         with:
           header: changeset
-          number: fromJson(env.CHANGESET).pr
+          number: ${{ fromJson(env.CHANGESET).pr }}
           recreate: true
           message: |
             This PR requires a changeset and it has one! Good job!
@@ -48,5 +48,5 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@fcf6fe9e4a0409cd9316a5011435be0f3327f1e1 # ratchet:marocchino/sticky-pull-request-comment@v2.3.1
         with:
           header: changeset
-          number: fromJson(env.CHANGESET).pr
+          number: ${{ fromJson(env.CHANGESET).pr }}
           delete: true
