--- a/.github/workflows/pr-check-changeset.yml
+++ b/.github/workflows/pr-check-changeset.yml
@@ -45,8 +45,7 @@ jobs:
         if: github.repository_owner != 'microsoft'
 
       # Check whether a changeset was added. This step will have the outcome '1' if there is no changeset.
-      - id: changeset-status
-        name: Changeset status
+      - name: Changeset metadata
         run: |
           # JSON output is piped through jq to compact it to a single line
           pnpm exec flub check changeset --branch=${{ github.base_ref }} --json | jq -c > changeset-metadata.json
@@ -68,7 +67,7 @@ jobs:
         run: |
           echo $(jq -c '. += {required: false}' changeset-metadata.json) > changeset-metadata.json
 
-      - name: Upload changeset status
+      - name: Upload changeset metadata
         uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # ratchet:actions/upload-artifact@v3
         with:
           name: changeset-metadata
@@ -81,9 +80,19 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'changeset-required') }}
     steps:
-      - name: Changeset not required
-        if: fromJson(env.CHANGESET).required == false && fromJson(env.CHANGESET).changesetFound == true
-        uses: marocchino/sticky-pull-request-comment@fcf6fe9e4a0409cd9316a5011435be0f3327f1e1 # ratchet:marocchino/sticky-pull-request-comment@v2.3.1
+      - name: Set required=false
+        run: |
+          echo "{'branch': '${{ github.base_ref }}','required': false}" > ./changeset-metadata.json
+
+      # We save the PR umber because downstream pipelines are triggered by workflow_run, and the PR number is not easily
+      # retrievable in such workflows
+      - name: Add PR number to metadata
+        run: |
+          echo $(jq -c '. += { pr: "${{ github.event.number }}" }' changeset-metadata.json) > changeset-metadata.json
+
+      - name: Upload changeset metadata
+        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # ratchet:actions/upload-artifact@v3
         with:
-          header: changeset
-          delete: true
+          name: changeset-metadata
+          path: ./changeset-metadata.json
+          retention-days: 3
