--- a/build-tools/packages/build-cli/package.json
+++ b/build-tools/packages/build-cli/package.json
@@ -86,6 +86,8 @@
 		"date-fns": "^2.29.1",
 		"execa": "^5.1.1",
 		"fs-extra": "^9.0.1",
+		"globby": "^11",
+		"gray-matter": "^4.0.3",
 		"human-id": "^4.0.0",
 		"inquirer": "^8.0.0",
 		"jssm": "^5.79.18",
@@ -135,7 +137,6 @@
 		"eslint-plugin-import": "~2.25.4",
 		"eslint-plugin-unicorn": "~40.0.0",
 		"eslint-plugin-unused-imports": "~2.0.0",
-		"globby": "^11",
 		"mocha": "^10.2.0",
 		"mocha-json-output-reporter": "^2.0.1",
 		"mocha-multi-reporters": "^1.5.1",
