--- a/build-tools/packages/changeset-summarizer/package.json
+++ b/build-tools/packages/changeset-summarizer/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "@fluid-internal/readme-command",
+	"name": "@fluid-internal/changeset-summarizer",
 	"version": "0.19.0",
 	"private": true,
-	"description": "CLI to generate readmes for Fluid build-tools",
+	"description": "Generates a summary of changesets and outputs it to a file.",
 	"homepage": "https://fluidframework.com",
 	"repository": {
 		"type": "git",
@@ -12,24 +12,13 @@
 	"license": "MIT",
 	"author": "Microsoft and contributors",
 	"sideEffects": false,
-	"main": "lib/index.js",
+	"type": "module",
+	"exports": "./lib/index.js",
 	"types": "lib/index.d.ts",
-	"bin": {
-		"fluid-readme": "./bin/run"
-	},
-	"files": [
-		"/bin",
-		"/lib",
-		"/oclif.manifest.json"
-	],
 	"scripts": {
-		"build": "npm run clean:manifest && concurrently npm:build:compile npm:lint && concurrently npm:build:manifest npm:build:diagrams",
-		"build:compile": "npm run tsc && npm run build:readme",
-		"build:machine-diagram": "jssm-viz -i \"./src/machines/*.fsl\"",
-		"build:manifest": "cross-env NODE_OPTIONS='--experimental-abortcontroller' oclif manifest",
-		"build:readme": "node \"./bin/dev\" generate readme",
-		"clean": "rimraf dist lib oclif.manifest.json *.tsbuildinfo *.build.log",
-		"clean:manifest": "rimraf oclif.manifest.json",
+		"build": "concurrently npm:build:compile npm:lint",
+		"build:compile": "npm run tsc",
+		"clean": "rimraf dist lib *.tsbuildinfo *.build.log",
 		"eslint": "eslint --format stylish src",
 		"eslint:fix": "eslint --format stylish src --fix --fix-type problem,suggestion,layout",
 		"format": "npm run prettier:fix",
@@ -40,7 +29,34 @@
 		"tsc": "tsc"
 	},
 	"dependencies": {
-		"semver": "^7.3.7"
+		"@fluid-tools/version-tools": "workspace:~",
+		"@fluidframework/build-tools": "workspace:~",
+		"globby": "^11",
+		"gray-matter": "^4.0.3",
+		"mdast-builder": "^1.1.1",
+		"mdast-util-assert": "^4.0.1",
+		"mdast-util-compact": "^4.1.1",
+		"mdast-util-directive": "^2.2.4",
+		"mdast-util-from-markdown": "^1.3.0",
+		"mdast-util-gfm": "^2.0.2",
+		"mdast-util-to-markdown": "^1.5.0",
+		"mdast-util-toc": "^6.1.1",
+		"remark": "^14.0.2",
+		"remark-frontmatter": "^4.0.1",
+		"remark-gfm": "^3.0.1",
+		"remark-github": "^11.2.4",
+		"remark-normalize-headings": "^3.0.1",
+		"remark-parse": "^10.0.1",
+		"remark-remove-comments": "^1.0.1",
+		"remark-stringify": "^10.0.2",
+		"remark-toc": "^8.0.1",
+		"unified": "^10.1.2",
+		"unist-util-filter": "^4.0.1",
+		"unist-util-map": "^3.1.3",
+		"unist-util-remove": "^3.1.1",
+		"unist-util-select": "^4.0.3",
+		"unist-util-visit": "^4.1.2",
+		"unist-util-visit-parents": "^5.1.3"
 	},
 	"devDependencies": {
 		"@fluidframework/build-common": "^1.2.0",
@@ -65,7 +81,8 @@
 		"nyc": "^15.1.0",
 		"prettier": "~2.6.2",
 		"rimraf": "^4.4.0",
-		"typescript": "~4.7.0"
+		"type-fest": "^2.19.0",
+		"typescript": "~4.9.5"
 	},
 	"engines": {
 		"node": ">=14.0.0"
