--- a/build-tools/packages/changeset-summarizer/tsconfig.json
+++ b/build-tools/packages/changeset-summarizer/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "@fluidframework/build-common/ts-common-config.json",
 	"compilerOptions": {
 		"composite": true,
+		"module": "NodeNext",
 		"rootDir": "./src",
 		"outDir": "./lib",
 		"types": ["node"],
