--- a/build-tools/packages/build-cli/package.json
+++ b/build-tools/packages/build-cli/package.json
@@ -72,6 +72,7 @@
 		"@fluid-tools/version-tools": "workspace:*",
 		"@fluidframework/build-tools": "workspace:*",
 		"@fluidframework/bundle-size-tools": "workspace:*",
+		"@manypkg/get-packages": "^2.2.0",
 		"@oclif/core": "^2.8.11",
 		"@oclif/plugin-autocomplete": "^2.3.1",
 		"@oclif/plugin-commands": "^2.2.17",
@@ -83,9 +84,12 @@
 		"@rushstack/node-core-library": "^3.59.5",
 		"async": "^3.2.4",
 		"chalk": "^2.4.2",
+		"cosmiconfig": "^8.2.0",
 		"danger": "^10.9.0",
 		"date-fns": "^2.30.0",
+		"detect-indent": "^6.1.0",
 		"execa": "^5.1.1",
+		"find-up": "^5.0.0",
 		"fs-extra": "^9.1.0",
 		"globby": "^11.1.0",
 		"gray-matter": "^4.0.3",
@@ -93,6 +97,7 @@
 		"inquirer": "^8.2.5",
 		"jssm": "^5.89.2",
 		"jssm-viz-cli": "^5.89.2",
+		"lodash.isequal": "^4.5.0",
 		"minimatch": "^7.4.6",
 		"npm-check-updates": "^16.10.15",
 		"oclif": "^3.9.1",
@@ -107,7 +112,8 @@
 		"strip-ansi": "^6.0.1",
 		"table": "^6.8.1",
 		"type-fest": "^2.19.0",
-		"type-plus": "^7.6.0"
+		"type-plus": "^7.6.0",
+		"yaml": "^2.3.1"
 	},
 	"devDependencies": {
 		"@fluid-internal/readme-command": "workspace:*",
@@ -119,6 +125,7 @@
 		"@types/chai-arrays": "^2.0.0",
 		"@types/fs-extra": "^8.1.2",
 		"@types/inquirer": "^8.2.6",
+		"@types/lodash.isequal": "^4.5.6",
 		"@types/mocha": "^9.1.1",
 		"@types/node": "^14.18.53",
 		"@types/prompts": "^2.4.4",
