--- a/build-tools/packages/build-cli/package.json
+++ b/build-tools/packages/build-cli/package.json
@@ -94,6 +94,7 @@
 		"jssm": "^5.89.2",
 		"jssm-viz-cli": "^5.89.2",
 		"latest-version": "^5.1.0",
+		"lodash.clonedeep": "^4.5.0",
 		"minimatch": "^7.4.6",
 		"npm-check-updates": "^16.10.15",
 		"oclif": "^3.9.1",
@@ -119,6 +120,7 @@
 		"@types/chai-arrays": "^2.0.0",
 		"@types/fs-extra": "^8.1.2",
 		"@types/inquirer": "^8.2.6",
+		"@types/lodash.clonedeep": "^4.5.7",
 		"@types/mocha": "^9.1.1",
 		"@types/node": "^14.18.53",
 		"@types/prompts": "^2.4.4",
