--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
 		"policy-check:asserts": "flub check policy --handler assert-short-codes --fix && pretty-quick",
 		"policy-check:fix": "flub check policy --excludeHandler assert-short-codes --excludeHandler npm-package-json-script-jest-config --fix",
 		"policy-check:fix-help": "echo Fix policy-check violations excludes assert-short-code/",
-		"prettier": "npm run prettier:root && pnpm run -r --no-sort --stream prettier",
-		"prettier:fix": "npm run prettier:root:fix && pnpm run -r --no-sort --stream prettier:fix",
+		"prettier": "npm run prettier:repo",
+		"prettier:fix": "npm run prettier:repo:fix",
 		"prettier:repo": "prettier --check . --ignore-path ./.prettierignore",
 		"prettier:repo:fix": "prettier --write . --ignore-path ./.prettierignore",
 		"prettier:root": "prettier --check ./*.* --ignore-path .prettierignore",
