--- a/build-tools/packages/build-cli/tsconfig.json
+++ b/build-tools/packages/build-cli/tsconfig.json
@@ -7,7 +7,13 @@
 		"types": ["node"],
 		"noImplicitAny": true,
 		"noUnusedLocals": true,
-	},
+
+		// settings required to use swc
+    "module": "ESNext",
+		"isolatedModules": true,
+		"verbatimModuleSyntax": true,
+		"esModuleInterop": true,
+  },
 	"include": ["src/**/*"],
 	"exclude": ["src/test/**/*"],
 }
