--- a/build-tools/packages/bundle-size-tools/tsconfig.json
+++ b/build-tools/packages/bundle-size-tools/tsconfig.json
@@ -8,7 +8,12 @@
 		"noImplicitAny": true,
 		"target": "es2018",
 		"types": ["node"],
-	},
+
+		// settings required to use swc
+		"isolatedModules": true,
+		"verbatimModuleSyntax": true,
+		"esModuleInterop": true,
+  },
 	"include": ["src/**/*.ts"],
 	"exclude": ["src/test/**/*", "dist", "node_modules"],
 }
