--- a/examples/data-objects/shared-text/tsconfig.json
+++ b/examples/data-objects/shared-text/tsconfig.json
@@ -11,7 +11,8 @@
 			"puppeteer",
 			"jest-environment-puppeteer",
 			"expect-puppeteer",
-		],"moduleResolution": "node16",
+		],
+		"moduleResolution": "node16",
 	},
 	"include": ["src/**/*.ts"],
 }
