--- a/examples/data-objects/smde/tsconfig.json
+++ b/examples/data-objects/smde/tsconfig.json
@@ -5,7 +5,8 @@
 		"module": "esnext",
 		"outDir": "lib",
 		"jsx": "react",
-		"types": ["react"],"moduleResolution": "node16",
+		"types": ["react"],
+		"moduleResolution": "node16",
 	},
 	"include": ["src/**/*"],
 }
