--- a/examples/data-objects/table-view/tsconfig.json
+++ b/examples/data-objects/table-view/tsconfig.json
@@ -5,7 +5,8 @@
 		"jsx": "react",
 		"rootDir": "./src",
 		"outDir": "lib",
-		"types": ["react"],"moduleResolution": "node16",
+		"types": ["react"],
+		"moduleResolution": "node16",
 	},
 	"include": ["src/**/*"],
 }
