--- a/packages/drivers/driver-web-cache/tsconfig.json
+++ b/packages/drivers/driver-web-cache/tsconfig.json
@@ -6,7 +6,8 @@
 		"outDir": "./dist",
 		"composite": true,
 		"moduleResolution": "node16",
-		"skipLibCheck": true,"moduleResolution": "node16",
+		"skipLibCheck": true,
+		"moduleResolution": "node16",
 	},
 	"include": ["src/**/*"],
 }
